--- a/console_gan.ipynb
+++ b/console_gan.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled5.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMRXVMFQZ5MK21LOlbmO8gM",
+      "authorship_tag": "ABX9TyP73M44RtVRNu4wRwKC/4AY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,11 +28,216 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "B3mrSmNcbG9q"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "B3mrSmNcbG9q",
+        "outputId": "b60b0951-24b0-4a4b-9be4-7028c7ccc611"
       },
       "source": [
         "from google.colab import drive\r\n",
         "drive.mount('/content/drive', force_remount=True)"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Mounted at /content/drive\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RYIY3abpbrCS",
+        "outputId": "f98a0599-c7f0-4911-a753-c41ccd6a7cb4"
+      },
+      "source": [
+        "%cd /content/drive/MyDrive/DeepLearning/RLGAN"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/content/drive/MyDrive/DeepLearning/RLGAN\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OogC7rg_b4V7",
+        "outputId": "b0ea659b-0b39-4329-be70-0fe83d44260f"
+      },
+      "source": [
+        "!git clone https://github.com/MohamadHMousavi/RLGan_cs236g"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "fatal: destination path 'RLGan_cs236g' already exists and is not an empty directory.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mJ9lSBPrcJIV",
+        "outputId": "1960be7a-a7af-492b-acc4-2b931150f26a"
+      },
+      "source": [
+        "%cd RLGan_cs236g/"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/content/drive/My Drive/DeepLearning/RLGAN/RLGan_cs236g\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UStIwxvncFwj",
+        "outputId": "13874cfe-a160-45d7-d6d3-6e6308f1a984"
+      },
+      "source": [
+        "!git fetch --all"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Fetching origin\n",
+            "remote: Enumerating objects: 4, done.\u001b[K\n",
+            "remote: Counting objects: 100% (4/4), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (3/3), done.\u001b[K\n",
+            "remote: Total 3 (delta 1), reused 0 (delta 0), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (3/3), done.\n",
+            "From https://github.com/MohamadHMousavi/RLGan_cs236g\n",
+            "   db6e5f6..faf2d63  main       -> origin/main\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "e6oc6CcdcQKZ",
+        "outputId": "713228a8-9b26-4b4e-d35b-f403160cbaa4"
+      },
+      "source": [
+        "!pip install faiss-gpu"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Collecting faiss-gpu\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/5d/36/383911b8edf8c29cb7e9e8aee4e6b69b0f36c52237e3a06ce64a9551ef22/faiss_gpu-1.7.0-cp37-cp37m-manylinux2014_x86_64.whl (89.4MB)\n",
+            "\u001b[K     |████████████████████████████████| 89.4MB 48kB/s \n",
+            "\u001b[?25hInstalling collected packages: faiss-gpu\n",
+            "Successfully installed faiss-gpu-1.7.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bBLNsoo8cZGJ",
+        "outputId": "18c7fef2-7d0b-49c3-e66c-f29e7ba3281a"
+      },
+      "source": [
+        "!sudo apt-get install libomp-dev"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Reading package lists... Done\n",
+            "Building dependency tree       \n",
+            "Reading state information... Done\n",
+            "The following additional packages will be installed:\n",
+            "  libomp5\n",
+            "Suggested packages:\n",
+            "  libomp-doc\n",
+            "The following NEW packages will be installed:\n",
+            "  libomp-dev libomp5\n",
+            "0 upgraded, 2 newly installed, 0 to remove and 29 not upgraded.\n",
+            "Need to get 239 kB of archives.\n",
+            "After this operation, 804 kB of additional disk space will be used.\n",
+            "Get:1 http://archive.ubuntu.com/ubuntu bionic/universe amd64 libomp5 amd64 5.0.1-1 [234 kB]\n",
+            "Get:2 http://archive.ubuntu.com/ubuntu bionic/universe amd64 libomp-dev amd64 5.0.1-1 [5,088 B]\n",
+            "Fetched 239 kB in 1s (225 kB/s)\n",
+            "debconf: unable to initialize frontend: Dialog\n",
+            "debconf: (No usable dialog-like program is installed, so the dialog based frontend cannot be used. at /usr/share/perl5/Debconf/FrontEnd/Dialog.pm line 76, <> line 2.)\n",
+            "debconf: falling back to frontend: Readline\n",
+            "debconf: unable to initialize frontend: Readline\n",
+            "debconf: (This frontend requires a controlling tty.)\n",
+            "debconf: falling back to frontend: Teletype\n",
+            "dpkg-preconfigure: unable to re-open stdin: \n",
+            "Selecting previously unselected package libomp5:amd64.\n",
+            "(Reading database ... 160975 files and directories currently installed.)\n",
+            "Preparing to unpack .../libomp5_5.0.1-1_amd64.deb ...\n",
+            "Unpacking libomp5:amd64 (5.0.1-1) ...\n",
+            "Selecting previously unselected package libomp-dev.\n",
+            "Preparing to unpack .../libomp-dev_5.0.1-1_amd64.deb ...\n",
+            "Unpacking libomp-dev (5.0.1-1) ...\n",
+            "Setting up libomp5:amd64 (5.0.1-1) ...\n",
+            "Setting up libomp-dev (5.0.1-1) ...\n",
+            "Processing triggers for libc-bin (2.27-3ubuntu1.2) ...\n",
+            "/sbin/ldconfig.real: /usr/local/lib/python3.7/dist-packages/ideep4py/lib/libmkldnn.so.0 is not a symbolic link\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xUnZDaW4dKFT"
+      },
+      "source": [
+        "!python gan_main.py --batch_size 40 --model_save_step 1.0"
       ],
       "execution_count": null,
       "outputs": []
