--- a/console_gan.ipynb
+++ b/console_gan.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled5.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP73M44RtVRNu4wRwKC/4AY",
+      "authorship_tag": "ABX9TyOfc4cCm+tq92q0xRwX/78N",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "B3mrSmNcbG9q",
-        "outputId": "b60b0951-24b0-4a4b-9be4-7028c7ccc611"
+        "outputId": "87ccafcd-4a55-4b33-88fc-f317337f45c6"
       },
       "source": [
         "from google.colab import drive\r\n",
@@ -56,12 +56,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RYIY3abpbrCS",
-        "outputId": "f98a0599-c7f0-4911-a753-c41ccd6a7cb4"
+        "outputId": "37f3d7fe-def6-4cd4-e0ce-011ed66f48e8"
       },
       "source": [
         "%cd /content/drive/MyDrive/DeepLearning/RLGAN"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -79,7 +79,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OogC7rg_b4V7",
-        "outputId": "b0ea659b-0b39-4329-be70-0fe83d44260f"
+        "outputId": "ddb34986-ba76-4ec3-d753-3132fa72f4ce"
       },
       "source": [
         "!git clone https://github.com/MohamadHMousavi/RLGan_cs236g"
@@ -89,7 +89,14 @@
         {
           "output_type": "stream",
           "text": [
-            "fatal: destination path 'RLGan_cs236g' already exists and is not an empty directory.\n"
+            "Cloning into 'RLGan_cs236g'...\n",
+            "remote: Enumerating objects: 156, done.\u001b[K\n",
+            "remote: Counting objects: 100% (156/156), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (109/109), done.\u001b[K\n",
+            "remote: Total 156 (delta 68), reused 127 (delta 44), pack-reused 0\u001b[K\n",
+            "Receiving objects: 100% (156/156), 35.38 MiB | 19.19 MiB/s, done.\n",
+            "Resolving deltas: 100% (68/68), done.\n",
+            "Checking out files: 100% (51/51), done.\n"
           ],
           "name": "stdout"
         }
@@ -102,17 +109,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mJ9lSBPrcJIV",
-        "outputId": "1960be7a-a7af-492b-acc4-2b931150f26a"
+        "outputId": "2deef401-83cf-4891-9611-f838cb62ed2e"
       },
       "source": [
         "%cd RLGan_cs236g/"
       ],
-      "execution_count": 5,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "/content/drive/My Drive/DeepLearning/RLGAN/RLGan_cs236g\n"
+            "/content/drive/MyDrive/DeepLearning/RLGAN/RLGan_cs236g\n"
           ],
           "name": "stdout"
         }
@@ -125,24 +132,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UStIwxvncFwj",
-        "outputId": "13874cfe-a160-45d7-d6d3-6e6308f1a984"
+        "outputId": "88fb23e6-513a-4e53-9e92-af9f273b92b8"
       },
       "source": [
         "!git fetch --all"
       ],
-      "execution_count": 6,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Fetching origin\n",
-            "remote: Enumerating objects: 4, done.\u001b[K\n",
-            "remote: Counting objects: 100% (4/4), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (3/3), done.\u001b[K\n",
-            "remote: Total 3 (delta 1), reused 0 (delta 0), pack-reused 0\u001b[K\n",
-            "Unpacking objects: 100% (3/3), done.\n",
-            "From https://github.com/MohamadHMousavi/RLGan_cs236g\n",
-            "   db6e5f6..faf2d63  main       -> origin/main\n"
+            "Fetching origin\n"
           ],
           "name": "stdout"
         }
@@ -160,7 +160,7 @@
       "source": [
         "!pip install faiss-gpu"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -187,7 +187,7 @@
       "source": [
         "!sudo apt-get install libomp-dev"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -234,13 +234,99 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xUnZDaW4dKFT"
+        "id": "xUnZDaW4dKFT",
+        "outputId": "4196ebbc-0653-4d95-bcae-802e26cd541a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "!python gan_main.py --batch_size 40 --model_save_step 1.0"
+        "!python gan_main.py --batch_size 50 --model_save_step 1.0 --g_lr 0.00005 --d_lr 0.00005 --pretrained_num 7200 --sample_step 1000 --g_conv_dim 16 --d_conv_dim 16 --adv_loss hinge"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2021-03-05 17:59:56.403615: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudart.so.11.0\n",
+            "Generator(\n",
+            "  (l1): Sequential(\n",
+            "    (0): SpectralNorm(\n",
+            "      (module): ConvTranspose2d(1, 64, kernel_size=(4, 4), stride=(1, 1))\n",
+            "    )\n",
+            "    (1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+            "    (2): ReLU()\n",
+            "  )\n",
+            "  (l2): Sequential(\n",
+            "    (0): SpectralNorm(\n",
+            "      (module): ConvTranspose2d(64, 32, kernel_size=(3, 3), stride=(2, 2), padding=(2, 2))\n",
+            "    )\n",
+            "    (1): BatchNorm2d(32, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+            "    (2): ReLU()\n",
+            "  )\n",
+            "  (l3): Sequential(\n",
+            "    (0): SpectralNorm(\n",
+            "      (module): ConvTranspose2d(32, 16, kernel_size=(3, 3), stride=(2, 2), padding=(2, 2))\n",
+            "    )\n",
+            "    (1): BatchNorm2d(16, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+            "    (2): ReLU()\n",
+            "  )\n",
+            "  (attn): Self_Attn(\n",
+            "    (query_conv): Conv2d(16, 2, kernel_size=(1, 1), stride=(1, 1))\n",
+            "    (key_conv): Conv2d(16, 2, kernel_size=(1, 1), stride=(1, 1))\n",
+            "    (value_conv): Conv2d(16, 16, kernel_size=(1, 1), stride=(1, 1))\n",
+            "    (softmax): Softmax(dim=-1)\n",
+            "  )\n",
+            "  (last): Sequential(\n",
+            "    (0): ConvTranspose2d(16, 1, kernel_size=(2, 2), stride=(2, 2), padding=(1, 1))\n",
+            "    (1): Tanh()\n",
+            "  )\n",
+            "  (input1d2d): ConvTranspose1d(144, 32, kernel_size=(1,), stride=(1,))\n",
+            ")\n",
+            "Discriminator(\n",
+            "  (input1d2d): ConvTranspose1d(32, 144, kernel_size=(1,), stride=(1,))\n",
+            "  (l1): Sequential(\n",
+            "    (0): SpectralNorm(\n",
+            "      (module): Conv2d(1, 16, kernel_size=(3, 3), stride=(2, 2), padding=(2, 2))\n",
+            "    )\n",
+            "    (1): LeakyReLU(negative_slope=0.1)\n",
+            "  )\n",
+            "  (l2): Sequential(\n",
+            "    (0): SpectralNorm(\n",
+            "      (module): Conv2d(16, 32, kernel_size=(3, 3), stride=(2, 2), padding=(2, 2))\n",
+            "    )\n",
+            "    (1): LeakyReLU(negative_slope=0.1)\n",
+            "  )\n",
+            "  (l3): Sequential(\n",
+            "    (0): SpectralNorm(\n",
+            "      (module): Conv2d(32, 64, kernel_size=(3, 3), stride=(2, 2), padding=(2, 2))\n",
+            "    )\n",
+            "    (1): LeakyReLU(negative_slope=0.1)\n",
+            "  )\n",
+            "  (attn): Self_Attn(\n",
+            "    (query_conv): Conv2d(64, 8, kernel_size=(1, 1), stride=(1, 1))\n",
+            "    (key_conv): Conv2d(64, 8, kernel_size=(1, 1), stride=(1, 1))\n",
+            "    (value_conv): Conv2d(64, 64, kernel_size=(1, 1), stride=(1, 1))\n",
+            "    (softmax): Softmax(dim=-1)\n",
+            "  )\n",
+            "  (last): Sequential(\n",
+            "    (0): Conv2d(64, 1, kernel_size=(4, 4), stride=(1, 1))\n",
+            "  )\n",
+            ")\n",
+            "loaded trained models (step: 7200)..!\n",
+            "Elapsed [0:00:08.718809], G_step [7300/1000000], D_step[7300/1000000], d_out_real: 1.6938, d_out_fake: 0.2990, \n",
+            "Elapsed [0:00:17.790692], G_step [7400/1000000], D_step[7400/1000000], d_out_real: 1.7143, d_out_fake: 0.2222, \n",
+            "Elapsed [0:00:26.813459], G_step [7500/1000000], D_step[7500/1000000], d_out_real: 1.7441, d_out_fake: 0.2142, \n",
+            "Elapsed [0:00:36.066633], G_step [7600/1000000], D_step[7600/1000000], d_out_real: 1.7913, d_out_fake: 0.1863, \n",
+            "Elapsed [0:00:45.086473], G_step [7700/1000000], D_step[7700/1000000], d_out_real: 1.7895, d_out_fake: 0.1722, \n",
+            "Elapsed [0:00:54.123924], G_step [7800/1000000], D_step[7800/1000000], d_out_real: 1.8318, d_out_fake: 0.1213, \n",
+            "Elapsed [0:01:03.351097], G_step [7900/1000000], D_step[7900/1000000], d_out_real: 1.8895, d_out_fake: 0.1309, \n",
+            "Elapsed [0:01:12.596206], G_step [8000/1000000], D_step[8000/1000000], d_out_real: 1.8132, d_out_fake: 0.1760, \n",
+            "<Figure size 640x480 with 1 Axes>\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
