--- a/console_gan.ipynb
+++ b/console_gan.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled5.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOfc4cCm+tq92q0xRwX/78N",
+      "authorship_tag": "ABX9TyOgmwS3tfOA3VggWmxNjssl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "B3mrSmNcbG9q",
-        "outputId": "87ccafcd-4a55-4b33-88fc-f317337f45c6"
+        "outputId": "9e10113e-64fe-4a63-d612-744c01bbad5c"
       },
       "source": [
         "from google.colab import drive\r\n",
@@ -56,17 +56,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RYIY3abpbrCS",
-        "outputId": "37f3d7fe-def6-4cd4-e0ce-011ed66f48e8"
+        "outputId": "ce85b1a3-eabc-4727-fd6c-6cfe001cee28"
       },
       "source": [
-        "%cd /content/drive/MyDrive/DeepLearning/RLGAN"
+        "%cd /content/drive/MyDrive/DeepLearning/RLGAN_test/"
       ],
       "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "/content/drive/MyDrive/DeepLearning/RLGAN\n"
+            "/content/drive/MyDrive/DeepLearning/RLGAN_test\n"
           ],
           "name": "stdout"
         }
@@ -84,7 +84,7 @@
       "source": [
         "!git clone https://github.com/MohamadHMousavi/RLGan_cs236g"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -109,7 +109,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mJ9lSBPrcJIV",
-        "outputId": "2deef401-83cf-4891-9611-f838cb62ed2e"
+        "outputId": "61295a66-2b08-45c1-b00b-6379bd191ce4"
       },
       "source": [
         "%cd RLGan_cs236g/"
@@ -119,7 +119,7 @@
         {
           "output_type": "stream",
           "text": [
-            "/content/drive/MyDrive/DeepLearning/RLGAN/RLGan_cs236g\n"
+            "/content/drive/MyDrive/DeepLearning/RLGAN_test/RLGan_cs236g\n"
           ],
           "name": "stdout"
         }
@@ -128,104 +128,65 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "CNThI3PICOOU",
+        "outputId": "0aef6d99-c74e-4eab-af1f-32f43fafd8a4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "UStIwxvncFwj",
-        "outputId": "88fb23e6-513a-4e53-9e92-af9f273b92b8"
-      },
-      "source": [
-        "!git fetch --all"
-      ],
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Fetching origin\n"
-          ],
-          "name": "stdout"
         }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "e6oc6CcdcQKZ",
-        "outputId": "713228a8-9b26-4b4e-d35b-f403160cbaa4"
       },
       "source": [
-        "!pip install faiss-gpu"
+        "!python gan_main.py --train False --pretrained_path './models/G.pth' --batch_size 10 --save_step 1.0 --g_conv_dim 16"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Collecting faiss-gpu\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/5d/36/383911b8edf8c29cb7e9e8aee4e6b69b0f36c52237e3a06ce64a9551ef22/faiss_gpu-1.7.0-cp37-cp37m-manylinux2014_x86_64.whl (89.4MB)\n",
-            "\u001b[K     |████████████████████████████████| 89.4MB 48kB/s \n",
-            "\u001b[?25hInstalling collected packages: faiss-gpu\n",
-            "Successfully installed faiss-gpu-1.7.0\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "bBLNsoo8cZGJ",
-        "outputId": "18c7fef2-7d0b-49c3-e66c-f29e7ba3281a"
-      },
-      "source": [
-        "!sudo apt-get install libomp-dev"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Reading package lists... Done\n",
-            "Building dependency tree       \n",
-            "Reading state information... Done\n",
-            "The following additional packages will be installed:\n",
-            "  libomp5\n",
-            "Suggested packages:\n",
-            "  libomp-doc\n",
-            "The following NEW packages will be installed:\n",
-            "  libomp-dev libomp5\n",
-            "0 upgraded, 2 newly installed, 0 to remove and 29 not upgraded.\n",
-            "Need to get 239 kB of archives.\n",
-            "After this operation, 804 kB of additional disk space will be used.\n",
-            "Get:1 http://archive.ubuntu.com/ubuntu bionic/universe amd64 libomp5 amd64 5.0.1-1 [234 kB]\n",
-            "Get:2 http://archive.ubuntu.com/ubuntu bionic/universe amd64 libomp-dev amd64 5.0.1-1 [5,088 B]\n",
-            "Fetched 239 kB in 1s (225 kB/s)\n",
-            "debconf: unable to initialize frontend: Dialog\n",
-            "debconf: (No usable dialog-like program is installed, so the dialog based frontend cannot be used. at /usr/share/perl5/Debconf/FrontEnd/Dialog.pm line 76, <> line 2.)\n",
-            "debconf: falling back to frontend: Readline\n",
-            "debconf: unable to initialize frontend: Readline\n",
-            "debconf: (This frontend requires a controlling tty.)\n",
-            "debconf: falling back to frontend: Teletype\n",
-            "dpkg-preconfigure: unable to re-open stdin: \n",
-            "Selecting previously unselected package libomp5:amd64.\n",
-            "(Reading database ... 160975 files and directories currently installed.)\n",
-            "Preparing to unpack .../libomp5_5.0.1-1_amd64.deb ...\n",
-            "Unpacking libomp5:amd64 (5.0.1-1) ...\n",
-            "Selecting previously unselected package libomp-dev.\n",
-            "Preparing to unpack .../libomp-dev_5.0.1-1_amd64.deb ...\n",
-            "Unpacking libomp-dev (5.0.1-1) ...\n",
-            "Setting up libomp5:amd64 (5.0.1-1) ...\n",
-            "Setting up libomp-dev (5.0.1-1) ...\n",
-            "Processing triggers for libc-bin (2.27-3ubuntu1.2) ...\n",
-            "/sbin/ldconfig.real: /usr/local/lib/python3.7/dist-packages/ideep4py/lib/libmkldnn.so.0 is not a symbolic link\n",
-            "\n"
+            "Generator(\n",
+            "  (l1): Sequential(\n",
+            "    (0): SpectralNorm(\n",
+            "      (module): ConvTranspose2d(1, 64, kernel_size=(4, 4), stride=(1, 1))\n",
+            "    )\n",
+            "    (1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+            "    (2): ReLU()\n",
+            "  )\n",
+            "  (l2): Sequential(\n",
+            "    (0): SpectralNorm(\n",
+            "      (module): ConvTranspose2d(64, 32, kernel_size=(3, 3), stride=(2, 2), padding=(2, 2))\n",
+            "    )\n",
+            "    (1): BatchNorm2d(32, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+            "    (2): ReLU()\n",
+            "  )\n",
+            "  (l3): Sequential(\n",
+            "    (0): SpectralNorm(\n",
+            "      (module): ConvTranspose2d(32, 16, kernel_size=(3, 3), stride=(2, 2), padding=(2, 2))\n",
+            "    )\n",
+            "    (1): BatchNorm2d(16, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+            "    (2): ReLU()\n",
+            "  )\n",
+            "  (attn): Self_Attn(\n",
+            "    (query_conv): Conv2d(16, 2, kernel_size=(1, 1), stride=(1, 1))\n",
+            "    (key_conv): Conv2d(16, 2, kernel_size=(1, 1), stride=(1, 1))\n",
+            "    (value_conv): Conv2d(16, 16, kernel_size=(1, 1), stride=(1, 1))\n",
+            "    (softmax): Softmax(dim=-1)\n",
+            "  )\n",
+            "  (last): Sequential(\n",
+            "    (0): ConvTranspose2d(16, 1, kernel_size=(2, 2), stride=(2, 2), padding=(1, 1))\n",
+            "    (1): Tanh()\n",
+            "  )\n",
+            "  (input1d2d): ConvTranspose1d(144, 32, kernel_size=(1,), stride=(1,))\n",
+            ")\n",
+            "loaded trained model\n",
+            "<Figure size 640x480 with 1 Axes>\n",
+            "<Figure size 640x480 with 1 Axes>\n",
+            "<Figure size 640x480 with 1 Axes>\n",
+            "<Figure size 640x480 with 1 Axes>\n",
+            "<Figure size 640x480 with 1 Axes>\n",
+            "<Figure size 640x480 with 1 Axes>\n",
+            "<Figure size 640x480 with 1 Axes>\n",
+            "<Figure size 640x480 with 1 Axes>\n",
+            "<Figure size 640x480 with 1 Axes>\n",
+            "<Figure size 640x480 with 1 Axes>\n"
           ],
           "name": "stdout"
         }
@@ -235,20 +196,20 @@
       "cell_type": "code",
       "metadata": {
         "id": "xUnZDaW4dKFT",
-        "outputId": "4196ebbc-0653-4d95-bcae-802e26cd541a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6fae1a6b-4ec8-4842-bd56-a32e13e41436"
       },
       "source": [
-        "!python gan_main.py --batch_size 50 --model_save_step 1.0 --g_lr 0.00005 --d_lr 0.00005 --pretrained_num 7200 --sample_step 1000 --g_conv_dim 16 --d_conv_dim 16 --adv_loss hinge"
+        "!python gan_main.py --batch_size 50 --save_step 1.0 --g_lr 0.00005 --d_lr 0.00005 --g_conv_dim 16 --d_conv_dim 16 --adv_loss hinge"
       ],
       "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "2021-03-05 17:59:56.403615: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudart.so.11.0\n",
+            "2021-03-08 21:46:29.805857: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudart.so.11.0\n",
             "Generator(\n",
             "  (l1): Sequential(\n",
             "    (0): SpectralNorm(\n",
@@ -313,16 +274,28 @@
             "    (0): Conv2d(64, 1, kernel_size=(4, 4), stride=(1, 1))\n",
             "  )\n",
             ")\n",
-            "loaded trained models (step: 7200)..!\n",
-            "Elapsed [0:00:08.718809], G_step [7300/1000000], D_step[7300/1000000], d_out_real: 1.6938, d_out_fake: 0.2990, \n",
-            "Elapsed [0:00:17.790692], G_step [7400/1000000], D_step[7400/1000000], d_out_real: 1.7143, d_out_fake: 0.2222, \n",
-            "Elapsed [0:00:26.813459], G_step [7500/1000000], D_step[7500/1000000], d_out_real: 1.7441, d_out_fake: 0.2142, \n",
-            "Elapsed [0:00:36.066633], G_step [7600/1000000], D_step[7600/1000000], d_out_real: 1.7913, d_out_fake: 0.1863, \n",
-            "Elapsed [0:00:45.086473], G_step [7700/1000000], D_step[7700/1000000], d_out_real: 1.7895, d_out_fake: 0.1722, \n",
-            "Elapsed [0:00:54.123924], G_step [7800/1000000], D_step[7800/1000000], d_out_real: 1.8318, d_out_fake: 0.1213, \n",
-            "Elapsed [0:01:03.351097], G_step [7900/1000000], D_step[7900/1000000], d_out_real: 1.8895, d_out_fake: 0.1309, \n",
-            "Elapsed [0:01:12.596206], G_step [8000/1000000], D_step[8000/1000000], d_out_real: 1.8132, d_out_fake: 0.1760, \n",
-            "<Figure size 640x480 with 1 Axes>\n"
+            "Elapsed [0:00:08.196879], G_step [100/1000000], D_step[100/1000000], d_out_real: 0.9953, d_out_fake: 1.0002, \n",
+            "Elapsed [0:00:15.831094], G_step [200/1000000], D_step[200/1000000], d_out_real: 0.9821, d_out_fake: 1.0106, \n",
+            "Elapsed [0:00:23.976399], G_step [300/1000000], D_step[300/1000000], d_out_real: 0.9843, d_out_fake: 1.0005, \n",
+            "Elapsed [0:00:31.428956], G_step [400/1000000], D_step[400/1000000], d_out_real: 0.9311, d_out_fake: 1.0542, \n",
+            "Elapsed [0:00:39.470954], G_step [500/1000000], D_step[500/1000000], d_out_real: 0.9445, d_out_fake: 1.0435, \n",
+            "Elapsed [0:00:47.132957], G_step [600/1000000], D_step[600/1000000], d_out_real: 0.8968, d_out_fake: 1.0792, \n",
+            "Elapsed [0:00:55.410490], G_step [700/1000000], D_step[700/1000000], d_out_real: 0.9323, d_out_fake: 1.0470, \n",
+            "Elapsed [0:01:03.018374], G_step [800/1000000], D_step[800/1000000], d_out_real: 0.9035, d_out_fake: 1.0781, \n",
+            "Elapsed [0:01:10.566228], G_step [900/1000000], D_step[900/1000000], d_out_real: 0.9294, d_out_fake: 1.0412, \n",
+            "Elapsed [0:01:18.446462], G_step [1000/1000000], D_step[1000/1000000], d_out_real: 0.8862, d_out_fake: 1.0988, \n",
+            "Elapsed [0:01:25.786186], G_step [1100/1000000], D_step[1100/1000000], d_out_real: 0.8729, d_out_fake: 1.1313, \n",
+            "Elapsed [0:01:33.221032], G_step [1200/1000000], D_step[1200/1000000], d_out_real: 0.8871, d_out_fake: 1.0985, \n",
+            "<Figure size 640x480 with 1 Axes>\n",
+            "Elapsed [0:01:41.415040], G_step [1300/1000000], D_step[1300/1000000], d_out_real: 0.8938, d_out_fake: 1.1101, \n",
+            "Elapsed [0:01:49.031881], G_step [1400/1000000], D_step[1400/1000000], d_out_real: 0.9074, d_out_fake: 1.0730, \n",
+            "Elapsed [0:01:56.864200], G_step [1500/1000000], D_step[1500/1000000], d_out_real: 0.8437, d_out_fake: 1.1398, \n",
+            "Elapsed [0:02:04.965899], G_step [1600/1000000], D_step[1600/1000000], d_out_real: 0.9106, d_out_fake: 1.1018, \n",
+            "Elapsed [0:02:12.671293], G_step [1700/1000000], D_step[1700/1000000], d_out_real: 0.9018, d_out_fake: 1.0846, \n",
+            "Elapsed [0:02:20.512883], G_step [1800/1000000], D_step[1800/1000000], d_out_real: 0.8987, d_out_fake: 1.1067, \n",
+            "Elapsed [0:02:28.013054], G_step [1900/1000000], D_step[1900/1000000], d_out_real: 0.9627, d_out_fake: 1.0381, \n",
+            "Elapsed [0:02:35.853249], G_step [2000/1000000], D_step[2000/1000000], d_out_real: 0.9459, d_out_fake: 1.0604, \n",
+            "Elapsed [0:02:43.831102], G_step [2100/1000000], D_step[2100/1000000], d_out_real: 0.8807, d_out_fake: 1.1347, \n"
           ],
           "name": "stdout"
         }
